# finalproject_barsukov_M25-555

./: .gitignore  Makefile  README.md  config.json  demo3.cast  main.py  pyproject.toml  test_app.py
data/: portfolios.json  rates.json  users.json
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
