[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "valutatrade-hub"
version = "1.0.0"
description = "Валютный кошелек с парсингом курсов"
authors = ["Mikhail Barsukov <Mr.Brock@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.10.0"
requests = "^2.32.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_level = "INFO"
log_file = "logs/actions.log"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
